manifests/09_network-policy-allow-ingress-from-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-ingress-to-metrics
 namespace: openshift-cluster-csi-drivers
 annotations:
  include.release.openshift.io/hypershift: "true"
  include.release.openshift.io/ibm-cloud-managed: "true"
  include.release.openshift.io/self-managed-high-availability: "true"
  include.release.openshift.io/single-node-developer: "true"
  capability.openshift.io/name: Storage
spec:
 podSelector:
   matchLabels:
     app: aws-ebs-csi-driver-controller
 ingress:
 - ports:
   - protocol: TCP
     port: 9201
     endPort: 9205
 policyTypes:
 - Ingress
